# hot-takes

./: .gitignore  README.md  cabal.project.local  hot-takes.cabal  shake.hs  tags
docs/: all.min.js
mad-src/: hot-takes.mad
src/: Main.hs
web-src/: index.html
