name:                hot-takes
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com//hot-takes#readme
license:             BSD3
license-file:        LICENSE
author:              Vanessa McHale
maintainer:          vanessa.mchale@iohk.io
copyright:           Copyright: (c) 2018 Vanessa McHale
--category:            Web
build-type:          Simple
extra-source-files:  mad-src/hot-takes.mad
extra-doc-files:     README.md
cabal-version:       >=1.18

Flag development {
  Description: Enable `-Werror`
  manual: True
  default: False
}

executable hot-takes
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , miso >= 0.9.0.0
                     , madlang >= 3.1.2.0
                     , text
                     , containers
                     , servant <= 0.11
  default-language:    Haskell2010
  if flag(development)
    ghc-options: -Werror
  ghc-options:         -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat

source-repository head
  type:     git
  location: https://github.com//hot-takes
