cabal-version: 1.18
name: hot-takes
version: 0.1.0.0
license: BSD3
license-file: LICENSE
copyright: Copyright: (c) 2018 Vanessa McHale
maintainer: vanessa.mchale@iohk.io
author: Vanessa McHale
homepage: https://github.com//hot-takes#readme
category: Web
build-type: Simple
extra-source-files:
    mad-src/hot-takes.mad
extra-doc-files: README.md

source-repository head
    type: git
    location: https://github.com//hot-takes

flag development
    description:
        Enable `-Werror`
    default: False
    manual: True

executable hot-takes
    main-is: Main.hs
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
                 -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat
    build-depends:
        base -any,
        miso >=0.9.0.0,
        madlang >=3.1.2.0,
        text -any,
        containers -any
    
    if flag(development)
        ghc-options: -Werror
